...
                    .width(ReplyDimens.emailSenderProfileImageSize)
                    .padding(top = ReplyDimens.grid1),
                contentAlignment = Alignment.TopCenter,
            ) {
                ReplyIconButton(
                    icon = painterResource(Res.drawable.ic_arrow_down),
                    contentDescription = "Navigate back",
                    onClick = onNavigateUp,
                    tint = colors.onSurface,
                    size = 56.dp,
                    modifier = Modifier
                        .requiredSize(56.dp)
                        .alpha(Emphasis.MEDIUM),
...
