...
                contentAlignment = Alignment.Center,
            ) {
                val current = accounts.firstOrNull { it.isCurrentAccount } ?: accounts.firstOrNull()
                if (current != null) {
                    Avatar(
                        image = current.avatar,
                        contentDescription = "profile avatar image",
                        size = ReplyDimens.navigationDrawerProfileImageSizePadded,
                    )
                }
            }
        }
    }
...
